Fix paper formatting

--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -9,14 +9,12 @@
 \title{Six ways to understand monads\\
 \small{Experiences from the functional programming course at TU Delft}}
 
-\author{\IEEEauthorblockN{Erik Meijer}
-\and
-\IEEEauthorblockN{Georgios Gousios}
+\author{\IEEEauthorblockN{Erik Meijer and Georgios Gousios}
 \IEEEauthorblockA{
 Delft University of Technology\\
 Delft, The Netherlands\\
-Email: {H.J.M.Meijer, G.Gousios@tudelft.nl} 
-}  
+Email: \{h.j.m.meijer, g.gousios\}@tudelft.nl
+}
 }
 \maketitle
 
@@ -27,11 +25,15 @@ Email: {H.J.M.Meijer, G.Gousios@tudelft.nl}
   computer science curricula do include a course on functional programming, in
   many cases it is disconnected from practical applications, which is
   precisely where functional programming shines. To fill in this gap, we
-  designed a functional programming course that demanded from students to
-  learn by experience with real world applications. In this work, we present
-  our experiences with conducting this course.
+  designed a functional programming course that  required students to
+  learn by experience with real world applications. In this paper, we present
+  the course's design and outline our experience from delivering it.
 
 \end{abstract}
+
+\begin{IEEEkeywords}
+functional programming, teaching
+\end{IEEEkeywords}
 
 \section{Introduction}
 
